# pear

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  app.py  docker-compose.yml  gunicorn_config.py  package-lock.json  render.yaml  requirements.txt  supervisord.conf  wsgi.py
app/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt  supervisord.conf
app/backend/: Interactive.py  README.md  answerGenerator.py  app.py  deployment.py  exam.py  exam.txt  examGenerator.py  majority_voting.py  models.py  pyproject.toml  questionGenerator.py  requirements.txt  task.py  validation.py  wsgi.py
app/backend/PdfScanner/: GeminiPdfScanner.py  __init__.py  pdfobject.py
app/backend/PdfScanner/prompts/: scanner.txt  validator.txt
app/backend/__pycache__/: Cohere.py  OpenAI.py  llm_model.py
app/backend/database/: __init__.py  db_factory.py  postgres_schema.sql  postgresdb.py  schema.ddl  sqlitedb.py
app/backend/tests/: example questions  test_answerGenerator.py  test_exam.py  test_example.py  test_extractor.py  test_extractorvalidator.py  test_models.py  test_questionGenerator.py  test_validation.py
app/backend/tests/database/: base_test_dao.py  test_postgresdb.py  (+1 more)
app/frontend/: .dockerignore  Dockerfile  jest.config.js  jest.config.ts  next-auth.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/frontend/__tests__/: landing-navigation.test.js
app/frontend/pages/: _app.tsx  exam.tsx  generate.tsx  generated.tsx  index.tsx  login.tsx  signup.tsx
app/frontend/store/: store.ts  user.ts
app/frontend/utils/: exportPDF.ts  signOut.js  signOut.ts  useScroll.ts  utils.ts
(+122 files in other folders)
