[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Eugene Cho <eugenecho@cohere.com>"]
readme = "README.md"
packages = [{include = "backend"}] 
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
cohere = "^5.13.11"
google-genai = "^1.2.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.10.0"
sympy = "^1.13.3"
antlr4-python3-runtime = "4.11"
streamlit = "^1.42.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
flask = "^3.1.0"
flask-cors = "^5.0.1"
jwt = "^1.3.1"
werkzeug = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."